[package]
name = "pawn-requests"
authors = ["Southclaws <hello@southcla.ws>"]
version = "0.9.0"

[lib]
name = "pawn_requests"
crate-type = ["dylib"]

[dependencies]
samp-sdk = { git="https://github.com/ZOTTCE/samp-sdk" }
reqwest = "0.9.8"
websocket = "0.22.2"
serde_json = "1.0.37"
string-error = "0.1.0"
enum_primitive = "0.1.1"
num-traits = "0.1.43"
futures = "0.1.25"
tokio = "0.1.14"
url = "1.2"
env_logger = "0.6.0"
log = "0.4.6"
